<resources>
    <string name="app_name">Text discount</string>
    <string name="title_bold">Добро пожаловать,</string>
    <string name="title_regular">Войдите чтобы продолжить</string>
    <string name="title_settings">Settings</string>
    <string name="text_login">Логин</string>
    <string name="text_password">Пароль</string>
    <string name="text_button">Войти</string>
    <string name="forgot_password">Забыли пароль?</string>
</resources>