<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinearLayout"
    tools:context=".MainActivity">

    <ImageView
        style="@style/logo"
        android:src="@drawable/logo2" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="14dp" />

    <TextView
        style="@style/text_bold"
        android:text="@string/title_bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <TextView
        style="@style/text_medium"
        android:text="@string/title_regular" />

    <LinearLayout
        android:id="@+id/login_form"
        style="@style/login_wrapper">

        <Space
            android:layout_width="match_parent"
            android:layout_height="80dp" />

        <TextView
            style="@style/login_text"
            android:text="@string/text_login"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/login_wrapper_input"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:counterTextColor="@color/text_input">

            <EditText
                android:id="@+id/login_input"
                style="@style/login_input" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_form"
        style="@style/password_wrapper">

        <TextView
            style="@style/password_text"
            android:text="@string/text_password"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/password_wrapper_input"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:counterTextColor="@color/text_input"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/password_input"
                style="@style/password_input" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="80dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom"
        style="@style/button_wrapper">

        <TextView
            style="@style/button_forgot_password"
            android:text="@string/forgot_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/textButton"
            android:text="@string/text_button"
            app:backgroundTint="@color/blue_main"
            style="@style/button" />

    </LinearLayout>

</LinearLayout>